--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "chai": "3.5.0",
     "charm": "0.2.0",
     "diff": "1.1.0",
-    "digdug": "1.5.0",
+    "digdug": "bryanforbes/digdug#typings",
     "dojo": "2.0.0-alpha.7",
     "glob": "7.0.3",
     "istanbul": "0.4.1",
-    "leadfoot": "1.6.12",
+    "leadfoot": "bryanforbes/digdug#typings",
     "lodash-amd": "4.16.4",
     "mimetype": "0.0.8",
     "platform": "1.3.1",
