--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dojo": "2.0.0-alpha.7",
     "glob": "7.0.3",
     "istanbul": "0.4.1",
-    "leadfoot": "bryanforbes/digdug#typings",
+    "leadfoot": "bryanforbes/leadfoot#typings",
     "lodash-amd": "4.16.4",
     "mimetype": "0.0.8",
     "platform": "1.3.1",
