--- a/package.json
+++ b/package.json
@@ -59,5 +59,6 @@
     "@types/chai": "3.4.34",
     "@types/node": "6.0.46",
     "dojo-typings": "1.11.5"
-  }
+  },
+  "typings": "./typings/intern/intern.d.ts"
 }
