--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "chai": "~4.0.2",
     "charm": "~1.0.2",
     "diff": "~3.2.0",
+    "express": "~4.15.3",
     "glob": "~7.1.1",
     "istanbul-lib-coverage": "~1.1.1",
     "istanbul-lib-hook": "~1.0.7",
@@ -94,6 +95,7 @@
     "@dojo/loader": "~2.0.0-beta2.2",
     "@theintern/dev": "~0.4.3",
     "@types/chalk": "~0.4.31",
+    "@types/express": "~4.0.36",
     "@types/glob": "~5.0.30",
     "@types/grunt": "~0.4.21",
     "@types/node": "~8.0.8",
