--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/source-map": "~0.1.29",
     "@types/ws": "~0.0.38",
     "benchmark": "~2.1.4",
+    "body-parser": "~1.17.2",
     "chai": "~4.0.2",
     "charm": "~1.0.2",
     "diff": "~3.2.0",
@@ -94,6 +95,7 @@
   "devDependencies": {
     "@dojo/loader": "~2.0.0-beta2.2",
     "@theintern/dev": "~0.4.3",
+    "@types/body-parser": "~1.16.4",
     "@types/chalk": "~0.4.31",
     "@types/express": "~4.0.36",
     "@types/glob": "~5.0.30",
