--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "@types/chai": "~4.0.1",
     "@types/charm": "~1.0.0",
     "@types/diff": "~3.2.0",
+    "@types/http-errors": "~1.5.34",
     "@types/lodash": "~4.14.65",
     "@types/mime-types": "~2.1.0",
     "@types/platform": "~1.3.0",
     "@types/source-map": "~0.1.29",
+    "@types/statuses": "~1.2.28",
     "@types/ws": "~0.0.38",
     "benchmark": "~2.1.4",
     "body-parser": "~1.17.2",
@@ -79,6 +81,7 @@
     "diff": "~3.2.0",
     "express": "~4.15.3",
     "glob": "~7.1.1",
+    "http-errors": "~1.6.1",
     "istanbul-lib-coverage": "~1.1.1",
     "istanbul-lib-hook": "~1.0.7",
     "istanbul-lib-instrument": "~1.7.3",
@@ -90,6 +93,7 @@
     "platform": "~1.3.4",
     "shell-quote": "~1.6.1",
     "source-map": "~0.5.6",
+    "statuses": "~1.3.1",
     "ws": "~2.3.1"
   },
   "devDependencies": {
